--- a/homework/css/style.css
+++ b/homework/css/style.css
@@ -48,7 +48,7 @@
     margin-bottom: 20px;
   }
   
-  button {
+  #button {
     background-color: royalblue;
     border: none;
     padding: 15px;
@@ -61,5 +61,10 @@
     border-radius: 10px;
     margin-top: 20px;
     line-height: 25px;
+    text-align: center;
+  }
+
+  .media-titulo {
+    margin-top: 15px;
   }
   
