--- a/homework/css/style.css
+++ b/homework/css/style.css
@@ -3,17 +3,18 @@
     padding: 0;
     font-family: "montserrat", sans-serif;
     box-sizing: border-box;
-  }
-  
-  body {
-    background-image: linear-gradient(120deg, #a188da, hsl(276, 96%, 59%));
-    min-height: 100vh;
-  }
-  
-  .container {
-    background-color: rgba(255, 255, 255, 0.5);
+}
+
+body {
+    background-image: url("../img/notas.jpg");
+    height: auto;
+    width: 100vw;
+}
+
+.container {
+    background-color: whitesmoke;
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.5);
-    width: 250px;
+    width: 320px;
     margin: 0 auto;
     padding: 20px;
     position: absolute;
@@ -21,50 +22,61 @@
     left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 10px;
-  }
-  
-  input {
+}
+
+input {
     width: 100%;
     border: none;
-    border-bottom: 3px solid #000;
+    border-bottom: 1.5px solid #fec0f8;
     background: none;
     padding: 10px;
     outline: none;
-    font-size: 18px;
-  }
-  
-  h1 {
+    font-size: 1.1rem;
+    text-align: inherit;
+}
+
+h1 {
     text-align: center;
     margin-bottom: 20px;
     text-transform: uppercase;
-    font-size: 1.2rem;
-  }
-  
-  h3 {
-    margin: 10px 0;
-  }
-  
-  input {
-    margin-bottom: 20px;
-  }
-  
-  #button {
-    background-color: royalblue;
+    font-size: 2.3rem;
+    letter-spacing: 2px;
+}
+
+#btn {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+#btnCalcular {
+    background-color: #af0e9e;
     border: none;
     padding: 15px;
     color: aliceblue;
-    font-size: 20px;
+    font-size: 16px;
     text-transform: uppercase;
     font-family: "Raleway", sans-serif;
     letter-spacing: 2px;
     cursor: pointer;
     border-radius: 10px;
-    margin-top: 20px;
     line-height: 25px;
     text-align: center;
-  }
+    width: 248px;
+    display: flex;
+    margin-top: 20px;
+    flex-direction: row;
+}
 
-  .media-titulo {
+#btnReiniciar {
+    height: 25px;
+    position: fixed;
+    left: 87%;
+    top: 74%;
+}
+
+p {
     margin-top: 15px;
-  }
-  
+    font-size: 20px;
+    padding: 3px;
+}
