--- a/homework/Denise/css/style.css
+++ b/homework/Denise/css/style.css
@@ -69,4 +69,37 @@
     margin-top: 15px;
     text-align: center;
   }
-  
+
+  .resultado{
+    background-color: rgba(219, 224, 243, 0.9);
+    box-shadow: 0 0 25px rgba(2, 9, 73, 0.5);
+    width: 350px;
+    margin: 0 auto;
+    padding: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 10px;
+    font-family: cursive;
+    font-size: 16px;
+    text-align: center;
+    display: none;
+  }
+
+  #button-ciente{
+    background-color: royalblue;
+    color: white;
+    border: none;
+    width: 100px;
+    padding: 5px;
+    border-radius: 5px;
+    margin: auto;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+  }
+
+  .status, .notas, .resultMedia, .statusShow, .mediaShow, .notasShow{
+    padding: 10px 0px ;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 16px;
+  }
