Subindo homework média com HTML, CSS e JS

--- a/homework/css/style.css
+++ b/homework/css/style.css
@@ -66,5 +66,13 @@
 
   .media-titulo {
     margin-top: 15px;
+    text-align: center;
   }
-  
+  .media{
+    font-size: 20px;
+  }
+  #res{
+    text-align: center;
+    margin-top: 10px;
+    font-size: 20px;
+  }
