Adicionando exercício JS média notas Christiane

--- a/exercicios-aula/Ex 7 - Modal/css/style.css
+++ b/exercicios-aula/Ex 7 - Modal/css/style.css
@@ -47,7 +47,7 @@ body {
     left: 0;
     top: 0;
     background-color: rgba(0, 0, 0, 0.8);
-    display: none;
+    display: none; /*para esconder algo*/
 }
 
 .login-modal__container{
