--- a/homework/css/style.css
+++ b/homework/css/style.css
@@ -13,7 +13,7 @@
   .container {
     background-color: rgba(255, 255, 255, 0.5);
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.5);
-    width: 250px;
+    width: 300px;
     margin: 0 auto;
     padding: 20px;
     position: absolute;
@@ -68,3 +68,29 @@
     margin-top: 15px;
   }
   
+  .aprovacao {
+
+    background-color: green;
+    padding: 20px;
+    border-radius: 10px;
+    color: whitesmoke;
+    text-align: center;
+    text-transform: uppercase;
+  }
+  
+  .reprovacao {
+  
+    background-color: red;
+    padding: 20px;
+    border-radius: 10px;
+    color: whitesmoke;
+    text-align: center;
+    text-transform: uppercase;
+  
+  }
+  
+  
+  .mensagem-de-erro {
+  
+    color: red;
+  }
