--- a/homework/css/style.css
+++ b/homework/css/style.css
@@ -5,11 +5,21 @@
     box-sizing: border-box;
   }
   
-  body {
+  /* body {
     background-image: linear-gradient(120deg, #a188da, hsl(276, 96%, 59%));
     min-height: 100vh;
   }
-  
+   */
+
+   body {
+    background-color: #fff; 
+    background-image: 
+    linear-gradient(90deg, transparent 79px, #fcc 79px, #fcc 81px, transparent 81px),
+    linear-gradient(#fee .1em, transparent .1em);
+    
+    background-size: 100% 1.2em;
+   }
+   
   .container {
     background-color: rgba(255, 255, 255, 0.5);
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.5);
